fix: Overflow issue

--- a/src/core/components/Aside/Aside.module.css
+++ b/src/core/components/Aside/Aside.module.css
@@ -4,6 +4,7 @@
     scroll-behavior: smooth;
     -ms-overflow-style: none;
     scrollbar-width: none;
+    overflow-x: hidden;
 }
 
 .aside::-webkit-scrollbar {
