--- a/src/core/components/LazyComponentWrapper/Lazy.module.css
+++ b/src/core/components/LazyComponentWrapper/Lazy.module.css
@@ -2,6 +2,8 @@
     opacity: 1;
     transform: translateY(0);
     transition: all 0.5s ease-in-out;
+    overflow: hidden;
+
 }
 
 .notVisible {
