--- a/src/core/screens/About/About.module.css
+++ b/src/core/screens/About/About.module.css
@@ -3,6 +3,8 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    overflow: hidden;
+
     gap: 1.5rem;
 
     opacity: 1;
