--- a/src/core/screens/Home/Home.module.css
+++ b/src/core/screens/Home/Home.module.css
@@ -2,6 +2,7 @@
     display: grid;
     place-items: center;
     opacity: 1;
+    overflow: hidden;
 
     width: 100%;
     height: 100%;
