--- a/src/core/screens/Projects/Projects.module.css
+++ b/src/core/screens/Projects/Projects.module.css
@@ -1,6 +1,7 @@
 .projects {
     display: flex;
     flex-direction: column;
+    overflow: hidden;
 
     padding: 4rem 10rem;
 
